grpc-app-example/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: nginx-ingress
    namespace: web
    annotations:
      nginx.ingress.kubernetes.io/rewrite-target: /
      kubernetes.io/ingress.class: nginx
      nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  #ingressClassName: nginx
  rules:
  - host:
    http:
      paths:
      - pathType: Prefix
        backend:
         service:
           name: nginx-svc
           port:
            number: 80
        path: /nginx
