grpc-app-example/spark.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: spark
    namespace: spark-apps
    annotations:
      nginx.ingress.kubernetes.io/rewrite-target: /
      kubernetes.io/ingress.class: nginx
      nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  #ingressClassName: nginx
  rules:
  - host:
    http:
      paths:
      - pathType: Prefix
        backend:
         service:
           name: spark-pi-test-1647298166764216514-ui-svc
           port:
            number: 4040
        path: /
